--- a/views/index.html
+++ b/views/index.html
@@ -6,9 +6,24 @@
     <title>Adgile Advertising | Targeted Advertising Solutions</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="css/style.css"
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-Test
+    <header>
+        <img src="#" alt="Logo">
+        <a href="#">Home</a>
+        <a href="#">About Us</a>
+        <a href="#">Markets</a>
+        <a href="#">Team</a>
+        <a href="#">Contact Us</a>
+    </header>
+    test
+    <div class="container">
+        <div id="home"></div>
+        <div id="about"></div>
+        <div id="markets"></div>
+        <div id="team"></div>
+        <div id="contact"></div>
+    </div>
 </body>
 </html>
