adding logo and styling header

--- a/views/index.html
+++ b/views/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <img src="#" alt="Logo">
+        <img src="img/Adgile Logo 11_18_PNG.webp" alt="Logo">
         <a href="#">Home</a>
         <a href="#">About Us</a>
         <a href="#">Markets</a>
@@ -19,7 +19,12 @@
     </header>
     test
     <div class="container">
-        <div id="home"></div>
+        <div id="home">
+            <div>
+                <h1>Welcome To Adgile Media Group!</h1>
+                <h2>Under Construction - Launching Summer 2020!</h2>
+            </div>
+        </div>
         <div id="about"></div>
         <div id="markets"></div>
         <div id="team"></div>
