styling header and navigation buttons

--- a/views/index.html
+++ b/views/index.html
@@ -10,8 +10,10 @@
 </head>
 <body>
     <header>
-        <img src="img/Adgile Logo 11_18_PNG.webp" alt="Logo">
-        <a href="#">Home</a>
+        <img src="img/Adgile Logo 11_18_PNG.webp" alt="Logo" id="logo">
+        
+            <a id="homeHd" href="#">Home</a>
+        
         <a href="#">About Us</a>
         <a href="#">Markets</a>
         <a href="#">Team</a>
