--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,49 @@
 header {
-    background-color: aqua;
+    background-color: white;
     position: fixed;
     top: 0;
     width: 100%;
     height: 75px;
+    -webkit-box-shadow: 0 10px 6px -6px #777;
+    -moz-box-shadow: 0 10px 6px -6px #777;
+    box-shadow: 0 10px 6px -6px #777;
+    padding-left: 7rem;
+    padding-right: 7rem;
+}
+
+.container{
+    margin-top: 100px;
+}
+
+#homeHd{
+    -webkit-transition: -webkit-transform 0.2s;
+    transition: transform 0.2s;
+    display: inline-block;
+    text-decoration:none;
+    position: relative;
+    margin: 20px;
+    color: green;
+}
+
+#homeHd:hover {
+    -webkit-transform: scale(0.9);
+    transform: scale(0.9);
+    color: blue;
+}
+
+ #homeHd::before{
+    position: absolute;
+	 top: -2px; 
+	left: -7px;
+	box-sizing: content-box;
+	padding: 0 5px;
+	width: 100%;
+	height: 100%;
+	border: 2px solid #39ff14 ;
+	content: '';
+	opacity: 0;
+	-webkit-transition: opacity 0.2s, -webkit-transform 0.2s;
+	transition: opacity 0.2s, transform 0.2s;
+	-webkit-transform: scale(0.9);
+	transform: scale(0.9);  
 }
