adding background styling on home, fixing some positioning and z scale issues

--- a/views/index.html
+++ b/views/index.html
@@ -14,15 +14,14 @@
         
             <a id="homeHd" href="#">Home</a>
         
-        <a href="#">About Us</a>
-        <a href="#">Markets</a>
-        <a href="#">Team</a>
-        <a href="#">Contact Us</a>
+        <a href="#" id="aboutHd">About Us</a>
+        <a href="#" id="marketsHd">Markets</a>
+        <a href="#" id="teamHd">Team</a>
+        <a href="#" id="contactHd">Contact Us</a>
     </header>
-    test
-    <div class="container">
+    <div id="content">
         <div id="home">
-            <div>
+            <div id="homeText">
                 <h1>Welcome To Adgile Media Group!</h1>
                 <h2>Under Construction - Launching Summer 2020!</h2>
             </div>
