--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,29 +9,31 @@ header {
     box-shadow: 0 10px 6px -6px #777;
     padding-left: 7rem;
     padding-right: 7rem;
+    z-index: 1;
 }
 
 .container{
     margin-top: 100px;
 }
 
-#homeHd{
+#homeHd, #aboutHd{ 
+    color: green;
     -webkit-transition: -webkit-transform 0.2s;
     transition: transform 0.2s;
     display: inline-block;
     text-decoration:none;
     position: relative;
     margin: 20px;
-    color: green;
+   
 }
 
-#homeHd:hover {
+#homeHd:hover, #aboutHd:hover {
     -webkit-transform: scale(0.9);
     transform: scale(0.9);
     color: blue;
 }
 
- #homeHd::before{
+ #homeHd::before, #aboutHd::before{
     position: absolute;
 	 top: -2px; 
 	left: -7px;
@@ -39,11 +41,43 @@ header {
 	padding: 0 5px;
 	width: 100%;
 	height: 100%;
-	border: 2px solid #39ff14 ;
+	border: 2px solid blue ;
 	content: '';
 	opacity: 0;
 	-webkit-transition: opacity 0.2s, -webkit-transform 0.2s;
 	transition: opacity 0.2s, transform 0.2s;
 	-webkit-transform: scale(0.9);
 	transform: scale(0.9);  
+}
+
+#homeHd:hover::before, #aboutHd:hover::before{
+    opacity: 1;
+    -webkit-transform: scale(1.2);
+    transform: scale(1.2);
+}
+
+#home{
+    position: relative;
+    background-image: url(../img/background.jpg);
+    background-size: cover;
+    width: 100%;
+    height: 58rem;
+}
+/* .container{
+    margin-left: 0rem;
+    margin-right: 0rem;
+    margin-top: 5em;
+    width: 100%;
+    padding: 0em;
+} */
+
+#content{
+    margin-top: 4.5rem;
+}
+
+#homeText{
+    position: absolute;
+    color: white;
+    top: 20rem;
+    right: 2rem;
 }
