--- a/views/index.html
+++ b/views/index.html
@@ -24,9 +24,21 @@
             <div id="homeText">
                 <h1>Welcome To Adgile Media Group!</h1>
                 <h2>Under Construction - Launching Summer 2020!</h2>
+                <button id="learn">Learn More</button>
             </div>
         </div>
-        <div id="about"></div>
+        <div id="about">
+            <img id="aboutImg" src="img/Disney Fleet.webp">
+            <div id="aboutText">
+                <h1>About <span style="color: #2baffa;">Us </span></h1>
+                
+                <p>Adgile Media Group is building the first ever nationwide truck side advertising network. With data at the center of all that we do, Adgile delivers advertisers the biggest bang for their advertising dollar, and state of the art audience insights to track just how big that bang is.</p>
+                <br>
+                <p>
+                    By leveraging last mile delivery vehicles in the most populated cities in the United States, Adgile brings OOH advertisements closer to the audience than ever before. 
+                </p>
+            </div>
+        </div>
         <div id="markets"></div>
         <div id="team"></div>
         <div id="contact"></div>
