styling about section

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -88,7 +88,15 @@ header {
 
 #aboutText{
 position: relative;
+padding-left: 1rem;
 top: 11rem;
+width: 23rem;
+float: left;
+border-left: 2px #2baffa solid;
+border-right: 2px #2baffa solid;
+-webkit-box-shadow: 0 10px 6px -6px #777;
+-moz-box-shadow: 0 10px 6px -6px #777;
+     box-shadow: 0 10px 6px -6px #777;
 }
 
 #about{
