--- a/views/index.html
+++ b/views/index.html
@@ -39,7 +39,23 @@
                 </p>
             </div>
         </div>
-        <div id="markets"></div>
+        <br>
+        <div id="markets" class="clearfix">
+            <img id="marketImg" src="img/NYC Advertising Coverage.webp">
+            <div id="marketText" class="marketBorder">
+                <h1> Our 
+                    
+                    <span style="color: #2baffa;">
+                    Markets
+                    </span>
+
+                </h1>
+                <br>
+                <p>Adgile is initially launching in NYC, Chicago and Los Angeles in the summer of 2020 and then plans to quickly expand to the top 20 domestic DMAs.</p>
+                    <br>
+                   <p> Given the size of the Adgile fleet in each city, our advertising partners receive significant exposure in all geographic areas. </p>
+            </div>
+        </div>
         <div id="team"></div>
         <div id="contact"></div>
     </div>
