fixing positioning issues with market text

--- a/views/index.html
+++ b/views/index.html
@@ -56,7 +56,9 @@
                    <p> Given the size of the Adgile fleet in each city, our advertising partners receive significant exposure in all geographic areas. </p>
             </div>
         </div>
-        <div id="team"></div>
+        <div id="team">
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolor ab magnam aut inventore cupiditate similique provident natus perspiciatis ducimus, eligendi enim, praesentium molestiae velit asperiores vel optio, tempore sed minus!
+        </div>
         <div id="contact"></div>
     </div>
 </body>
