--- a/public/css/style.css
+++ b/public/css/style.css
@@ -106,7 +106,7 @@ border-right: 2px #2baffa solid;
 }
 #markets{
     background: rgb(255,255,255);
-    background: linear-gradient(180deg, rgba(255,255,255,1) 0%, rgba(43,175,250,1) 100%);
+    background: linear-gradient(180deg, rgba(255,255,255,1) 12%, rgba(43,175,250,1) 100%);
 }
 
 #marketImg{
@@ -118,16 +118,22 @@ border-right: 2px #2baffa solid;
     position: relative;
     left: 6rem;
     font-size: 1.1rem;
-    /* top: 1rem; */
+    top: 4rem;
     width: 23rem;
     background-color: white;
     padding-left: 1rem;
     padding-right: .3rem;
-    padding-top: 4rem;
+    padding-top: 3rem;
     padding-bottom: 2rem;
     border-left: 2px #2baffa solid;
 border-right: 2px #2baffa solid;
 -webkit-box-shadow: 0 10px 6px -6px #777;
 -moz-box-shadow: 0 10px 6px -6px #777;
      box-shadow: 0 10px 6px -6px #777;
+}
+
+#team{
+    height: 50rem;
+    background: rgb(43,175,250);
+    background: linear-gradient(180deg, rgba(43,175,250,1) 0%, rgba(255,255,255,1) 80%);
 }
