--- a/views/index.html
+++ b/views/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adgile Advertising | Targeted Advertising Solutions</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
@@ -51,13 +54,33 @@
 
                 </h1>
                 <br>
-                <p>Adgile is initially launching in NYC, Chicago and Los Angeles in the summer of 2020 and then plans to quickly expand to the top 20 domestic DMAs.</p>
+                <p>Adgile is initially launching in <span style="font-weight: bold;">NYC</span>, <span style="font-weight: bold;">Chicago</span> and <span style="font-weight: bold;">Los Angeles</span> in the summer of 2020 and then plans to quickly expand to the top 20 domestic DMAs.</p>
                     <br>
                    <p> Given the size of the Adgile fleet in each city, our advertising partners receive significant exposure in all geographic areas. </p>
             </div>
         </div>
         <div id="team">
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolor ab magnam aut inventore cupiditate similique provident natus perspiciatis ducimus, eligendi enim, praesentium molestiae velit asperiores vel optio, tempore sed minus!
+            <div id="teamHeadline">
+                <h1>Meet The <span style="color: #2baffa;">Team</span></h1>
+            </div>
+            <div class="row">
+
+                <div id="teamCard">
+                    <img src="img/mitchellgordon.webp">
+                    <a href="#mgordon" data-toggle="collapse" role="button"aria-expanded="false" aria-controls="collapseExample">
+                    <h2>Mitchell Gordon</h2>
+                    <h3 style="text-align: center;">CEO</h3>
+                </a>
+                <div class="collapse" id="mgordon">
+                    <div class="card card-body">
+                        Test
+                      </div>
+                </div>
+                </div>
+
+
+
+            </div>
         </div>
         <div id="contact"></div>
     </div>
