adding animation and info to meet the team cards

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -162,3 +162,7 @@ border-right: 2px #2baffa solid;
     left: 7rem;
     width: fit-content;
 }
+
+#mgordon, #mstrahan, #flan, #tshea{
+    width: 236px;
+}
