--- a/views/index.html
+++ b/views/index.html
@@ -73,12 +73,52 @@
                 </a>
                 <div class="collapse" id="mgordon">
                     <div class="card card-body">
-                        Test
+                        Corporate executive, investor and investment banker for over 35 years.  Previously President and CFO, Cambridge Capital Acquisition Corporation (NASADAQ:CAMB), 
+
+CFO, Interpool Inc. (NYSE:IPX), Partner and Global Co-Head of the Transportation Investment Banking Group at Salomon Smith Barney.
                       </div>
                 </div>
                 </div>
 
+                <div id="teamCard">
+                    <img src="img/MS headshot.webp">
+                    <a href="#mstrahan" data-toggle="collapse" role="button"aria-expanded="false" aria-controls="collapseExample">
+                    <h2>Marc Strachan</h2>
+                    <h3 style="text-align: center;">CMO</h3>
+                </a>
+                <div class="collapse" id="mstrahan">
+                    <div class="card card-body">
+                        Proven, results driven, senior level marketing and advertising executive, with experience across
+multiple categories of business. Chairman of ADCOLOR, inc. Previously Chief Client Office (CCO) at Publicis.Sapient and Director of Brand Marketing at Diageo.
+                      </div>
+                </div>
+                </div>
 
+                <div id="teamCard">
+                    <img src="img/flan.webp">
+                    <a href="#flan" data-toggle="collapse" role="button"aria-expanded="false" aria-controls="collapseExample">
+                    <h2>Max Flannery</h2>
+                    <h5 style="text-align: center;">Co-Founder and President</h5>
+                </a>
+                <div class="collapse" id="flan">
+                    <div class="card card-body">
+                        Creative problem solver and passionate entrepreneur with prior experience in financial and strategic consulting. Max graduated from Miami University's Farmer School of Business with degrees in Finance and Accounting.
+                      </div>
+                </div>
+                </div>
+
+                <div id="teamCard">
+                    <img src="img/tomshea.webp">
+                    <a href="#tshea" data-toggle="collapse" role="button"aria-expanded="false" aria-controls="collapseExample">
+                    <h2>Tom Shea</h2>
+                    <h5 style="text-align: center;">Co-Founder and COO</h5>
+                </a>
+                <div class="collapse" id="tshea">
+                    <div class="card card-body">
+                        Detail-oriented tech wiz with past experience as a full stack developer and operation manager. Tom is currently enrolled at the University of Chicago's Booth School of Business. Tom holds a degree in Finance, Computer Science, & Chinese from Boston College's Carroll School of Management.
+                      </div>
+                </div>
+                </div>
 
             </div>
         </div>
