--- a/views/index.html
+++ b/views/index.html
@@ -17,17 +17,17 @@
         
             <a id="homeHd" href="#">Home</a>
         
-        <a href="#" id="aboutHd">About Us</a>
-        <a href="#" id="marketsHd">Markets</a>
-        <a href="#" id="teamHd">Team</a>
-        <a href="#" id="contactHd">Contact Us</a>
+        <a href="#about" id="aboutHd">About Us</a>
+        <a href="#markets" id="marketsHd">Markets</a>
+        <a href="#team" id="teamHd">Team</a>
+        <a href="#contact" id="contactHd">Contact Us</a>
     </header>
     <div id="content">
         <div id="home">
             <div id="homeText">
                 <h1>Welcome To Adgile Media Group!</h1>
                 <h2>Under Construction - Launching Summer 2020!</h2>
-                <button id="learn">Learn More</button>
+                <button id="learn"><a href="#about" id="learnBut">Learn More</a></button>
             </div>
         </div>
         <div id="about">
@@ -130,8 +130,12 @@ multiple categories of business. Chairman of ADCOLOR, inc. Previously Chief Clie
 
             </div>
         </div>
-        <div id="contact">
+        <br>
+        <br>
+        <br>
+        <div id="contact"><h1 id="contactHeadline">Contact <span style="color: #2baffa;">Us</span></h1>
             <img src="img/apple.webp" alt="" id="contactImage">
+            
             <div id="contactForm">
                 <form action="mailto:example@adgile.co">
                 <input type="text" id="name" name="name" value="Name...">
@@ -143,5 +147,9 @@ multiple categories of business. Chairman of ADCOLOR, inc. Previously Chief Clie
             </div>
         </div>
     </div>
+    <footer>
+        ©2020 Adgile Media Group
+        <p style="font-size: 7px;">Design by Josh Segel</p>
+    </footer>
 </body>
 </html>
