--- a/views/index.html
+++ b/views/index.html
@@ -15,7 +15,7 @@
     <header>
         <img src="img/Adgile Logo 11_18_PNG.webp" alt="Logo" id="logo">
         
-            <a id="homeHd" href="#">Home</a>
+            <a id="homeHd" href="#">Home</a> 
         
         <a href="#about" id="aboutHd">About Us</a>
         <a href="#markets" id="marketsHd">Markets</a>
@@ -38,7 +38,7 @@
                 <p>Adgile Media Group is building the first ever nationwide truck side advertising network. With data at the center of all that we do, Adgile delivers advertisers the biggest bang for their advertising dollar, and state of the art audience insights to track just how big that bang is.</p>
                 <br>
                 <p>
-                    By leveraging last mile delivery vehicles in the most populated cities in the United States, Adgile brings OOH advertisements closer to the audience than ever before. 
+                    B leveraging last mile delivery vehicles in the most populated cities in the United States, Adgile brings OOH advertisements closer to the audience than ever before. 
                 </p>
             </div>
         </div>
